Mise au propre de la requete POST avec des exceptions